tests/spec/emit/snapshots/unused_mutable_variable_reassignment.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() {
    let mut x = 0
    x = 1
  }
---
package main

func test() {}
