tests/spec/emit/snapshots/unwrap_or_evaluates_an_effectful_default_before_the_error_test.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn fallback() -> int {
    fmt.Println("fallback ran")
    7
  }
  
  fn one() -> int {
    strconv.Atoi("1").unwrap_or(fallback())
  }
---
package main

import (
	"fmt"
	"strconv"
)

func fallback() int {
	fmt.Println("fallback ran")
	return 7
}

func one() int {
	ret, err := strconv.Atoi("1")
	default_1 := fallback()
	if err != nil {
		ret = default_1
	}
	return ret
}
