tests/spec/emit/snapshots/unwrap_or_on_go_result_call_assigns_the_default_on_error.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn main() {
    let port = strconv.Atoi("x").unwrap_or(80)
    fmt.Println(port)
  }
---
package main

import (
	"fmt"
	"strconv"
)

func main() {
	port, err := strconv.Atoi("x")
	if err != nil {
		port = 80
	}
	fmt.Println(port)
}
