tests/spec/emit/snapshots/unwrap_or_on_map_get_as_an_argument.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let counts = Map.new<string, int>()
    fmt.Println(counts.get("a").unwrap_or(0) + 1)
  }
---
package main

import "fmt"

func main() {
	counts := make(map[string]int)
	fmt.Println(counts["a"] + 1)
}
