tests/spec/emit/snapshots/unwrap_or_zero_on_map_get_reads_the_map.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn count(words: Slice<string>) -> Map<string, int> {
    let mut df = Map.new<string, int>()
    for w in words {
      df[w] = df.get(w).unwrap_or(0) + 1
    }
    df
  }
  
  fn label(names: Map<int, string>, id: int) -> string {
    names.get(id).unwrap_or("")
  }
  
  fn enabled(flags: Map<string, bool>, key: string) -> bool {
    let on = flags.get(key).unwrap_or(false)
    on
  }
  
  fn weight(weights: Map<string, float64>, key: string) -> float64 {
    weights.get(key).unwrap_or(0.0)
  }
  
  fn nonzero(counts: Map<string, int>, key: string) -> int {
    counts.get(key).unwrap_or(1)
  }
  
  fn tags(index: Map<string, Slice<string>>, key: string) -> Slice<string> {
    index.get(key).unwrap_or([])
  }
---
package main

func count(words []string) map[string]int {
	df := make(map[string]int)
	for _, w := range words {
		df[w] = df[w] + 1
	}
	return df
}

func label(names map[int]string, id int) string {
	return names[id]
}

func enabled(flags map[string]bool, key string) bool {
	on := flags[key]
	return on
}

func weight(weights map[string]float64, key string) float64 {
	return weights[key]
}

func nonzero(counts map[string]int, key string) int {
	ret, ok := counts[key]
	if !ok {
		ret = 1
	}
	return ret
}

func tags(index map[string][]string, key string) []string {
	ret, ok := index[key]
	if !ok {
		ret = []string{}
	}
	return ret
}
