tests/spec/emit/snapshots/user_defined_unit_enum.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Tag { A, B, C }
  
  fn test() -> bool {
    let u1 = Tag.A
    let u2 = Tag.B
    u1 == u2
  }
---
package main

func MakeTagA() Tag {
	return Tag{Tag: TagA}
}

func MakeTagB() Tag {
	return Tag{Tag: TagB}
}

func MakeTagC() Tag {
	return Tag{Tag: TagC}
}

type TagTag uint8

const (
	TagA TagTag = iota
	TagB
	TagC
)

type Tag struct {
	Tag TagTag
}

func test() bool {
	u1 := MakeTagA()
	u2 := MakeTagB()
	return u1 == u2
}
